<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp" />

    <EditText
        android:id="@+id/editTextPEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/profile_page_email_placeholder"
        android:inputType="none" 
        android:editable="false"
       />

	<Space
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:minHeight="20dp" />
	
    <EditText
        android:id="@+id/editTextRMobilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/profile_page_phone_placeholder"
        android:inputType="none"
        android:editable="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />
    
     <EditText
        android:id="@+id/editTextPName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/profile_page_user_name_placeholder"
        >

        <requestFocus />
    </EditText>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />
     <EditText
	        android:id="@+id/editTextRBankAccount"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/profile_page_bank_account_placeholder"
	        android:inputType="numberPassword" >
	
	       
	</EditText>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp" />

   

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_apply_button" />

</LinearLayout>